--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "avataaars": "^1.2.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "random-avatar-generator": "^2.0.0",
