--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.ignoreWords": [
         "birthdate",
+        "id",
         "ionicons",
         "login",
         "login stack navigator",
+        "mentee",
+        "mentee id",
         "navigations",
         "navigator",
         "pressable",
