setup pendings container

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "mentee id",
         "navigations",
         "navigator",
+        "pendings",
         "pressable",
         "stack",
         "submit",
