--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-status-bar-height": "^2.5.0",
+    "react-native-user-avatar": "^1.0.7",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "react-navigation-tabs": "^2.9.0"
