fixed Profile styling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "avataaars": "^1.2.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.29.0",
     "random-avatar-generator": "^2.0.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
