--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "navigations",
         "navigator",
         "pendings",
+        "posttypes",
         "pressable",
         "stack",
         "submit",
