--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-card-stack-swiper": "^1.2.5",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
