--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
-    "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
+    "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
     "avataaars": "^1.2.1",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
@@ -33,11 +33,12 @@
     "react-native-user-avatar": "^1.0.7",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
-    "react-navigation-tabs": "^2.9.0"
+    "react-native-windows": "^0.63.3",
+    "react-navigation-tabs": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
